<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutActivity">

    <Button
        android:id="@+id/btnRojo"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/Rojo"
        android:onClick="goRojo"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btnVerde"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/btnRojo"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="68dp"
        android:background="@color/Verde"
        android:onClick="goVerde"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btnAzul"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_below="@+id/btnRojo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="256dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:background="@color/Azul"
        android:onClick="goAzul"
        android:text="@string/_2" />
</RelativeLayout>